syntax = "proto3";
package public.auth.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "public/auth/v1/user.proto";

option go_package = "github.com/dwethmar/lingo/protogen/public/auth/v1;auth";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Lingo Auth API";
    version: "1.0";
    contact: {
      name: "lingo";
      url: "https://github.com/DWethmar/lingo";
      email: "denniswethmar@gmail.com";
    };
    license: {
      name: "MIT License"
      url: "https://github.com/DWethmar/lingo/blob/main/LICENSE";
    };
  };
  host: "localhost:8092";
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        name: "Authorization";
        in: IN_HEADER;
        description: "Enter the token with the `Bearer: ` prefix, e.g. Bearer abcde12345";
      };
    };
  };
};

service AuthService {
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }
}

message LoginUserRequest {
  oneof login {
    string email = 1 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The email of a user"},
      (google.api.field_behavior) = REQUIRED
    ];
    string username = 2 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The username of a user"},
      (google.api.field_behavior) = REQUIRED
    ];
  }

  string password = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The password of a user"},
    (google.api.field_behavior) = REQUIRED
  ];
}

message LoginUserResponse {
  public.auth.v1.User user = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The user that was logged in"},
    (google.api.field_behavior) = REQUIRED
  ];
  string token = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The token that was generated"},
    (google.api.field_behavior) = REQUIRED
  ];
  string refresh_token = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The refresh token that was generated"},
    (google.api.field_behavior) = OPTIONAL
  ];
}

message CreateUserRequest {
  string email = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The email of a user"},
    (google.api.field_behavior) = REQUIRED
  ];
  string username = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The username of a user"},
    (google.api.field_behavior) = REQUIRED
  ];
  string password = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The password of a user"},
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreateUserResponse {
  public.auth.v1.User user = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The user that was registered"},
    (google.api.field_behavior) = REQUIRED
  ];
}
